# BitArray

./: BitArray.hpp  CMakeLists.txt  LICENSE  README.md  SIMDHelper.hpp
.github/workflows/: unittest.yml
benchmarks/: BitArray_Benchmark.cpp  CMakeLists.txt
tests/: BitArray_Benchmark.cpp  BitArray_Test.cpp  CMakeLists.txt  Main_TestAll.cpp  speedtest.cpp
